fix: fixed the spacing between meet expert team and images

--- a/tstyle.css
+++ b/tstyle.css
@@ -69,7 +69,7 @@ html, body {
     align-items: center;
     justify-content: center;
     text-align: center;
-    padding-bottom: 100px;
+    padding-bottom: 0px;
 
 }
 .transport{
